# crypt

./: .meson.build.swp  com.github.dcharles525.crypt.yml  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.github.dcharles525.crypt/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.dcharles525.crypt.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.dcharles525.crypt.yml/: build-crypt  cleanup  finish  init
.flatpak-builder/cache/summaries/: 2d534595ab7eee8349f6e0db143db0d856a4ab6d45985db1d2269d559021139e-b858e8d4b7337733725c709dc3794359f0b8eef5efe803ea267357a66bbf7580.delta  65a3290de4f888e625e5d6e6297cb92475a447ed2958155eaf19061bb450c3b3-d0f7b8acf3bbedbce5a6ea6c167f35d415a32112fb6747cac2a8be02299d93ec.delta  9575fa5dd28c62343a614831835458620c5a8e27a251da411e0bfae6f43b2b52-b858e8d4b7337733725c709dc3794359f0b8eef5efe803ea267357a66bbf7580.delta  df632b0566e389a50393bb7798c37dbe0c1b1135d94e70052eb082c4b6fe2fb1-d0f7b8acf3bbedbce5a6ea6c167f35d415a32112fb6747cac2a8be02299d93ec.delta  ee6f4a4e1c5bf1ab748db939972d89a9495455816b249b65a86da3ace7c3cc4c-d0f7b8acf3bbedbce5a6ea6c167f35d415a32112fb6747cac2a8be02299d93ec.delta
.flatpak-builder/checksums/: x86_64-com.github.dcharles525.crypt.yml
.flatpak-builder/git/https_github.com_dcharles525_Caroline.git/: FETCH_HEAD  config  shallow
data/: com.github.dcharles525.crypt.appdata.xml.in
po/: pt.po
po/extra/: LINGUAS  pt.po
src/: .Crypt.vala.swp  Crypt.vala
src/Services/: Draw.vala
vapi/: caroline-0.3.vapi
(+1 files in other folders)
